--- a/win32/VS2010/opusinfo.vcxproj.filters
+++ b/win32/VS2010/opusinfo.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClCompile Include="..\..\src\resample.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\utf8.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\src\wave_out.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -92,6 +95,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\stack_alloc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\utf8.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\wave_out.h">
