--- a/win32/VS2010/opusenc.vcxproj
+++ b/win32/VS2010/opusenc.vcxproj
@@ -25,10 +25,12 @@
     <ClCompile Include="..\..\src\diag_range.c" />
     <ClCompile Include="..\..\src\flac.c" />
     <ClCompile Include="..\..\src\lpc.c" />
+    <ClCompile Include="..\..\src\metadata_file.c" />
     <ClCompile Include="..\..\src\opusenc.c" />
     <ClCompile Include="..\..\src\opus_header.c" />
     <ClCompile Include="..\..\src\picture.c" />
     <ClCompile Include="..\..\src\resample.c" />
+    <ClCompile Include="..\..\src\utf8.c" />
     <ClCompile Include="..\..\src\wave_out.c" />
     <ClCompile Include="..\..\src\wav_io.c" />
     <ClCompile Include="..\..\win32\unicode_support.c" />
@@ -39,6 +41,7 @@
     <ClInclude Include="..\..\src\flac.h" />
     <ClInclude Include="..\..\src\info_opus.h" />
     <ClInclude Include="..\..\src\lpc.h" />
+    <ClInclude Include="..\..\src\metadata_file.h" />
     <ClInclude Include="..\..\src\opusenc.h" />
     <ClInclude Include="..\..\src\opusinfo.h" />
     <ClInclude Include="..\..\src\opus_header.h" />
@@ -47,6 +50,7 @@
     <ClInclude Include="..\..\src\resample_sse.h" />
     <ClInclude Include="..\..\src\speex_resampler.h" />
     <ClInclude Include="..\..\src\stack_alloc.h" />
+    <ClInclude Include="..\..\src\utf8.h" />
     <ClInclude Include="..\..\src\wave_out.h" />
     <ClInclude Include="..\..\src\wav_io.h" />
     <ClInclude Include="..\..\win32\config.h" />
