--- a/win32/VS2015/opusenc.vcxproj
+++ b/win32/VS2015/opusenc.vcxproj
@@ -21,10 +21,12 @@
   <ItemGroup>
     <ClCompile Include="..\..\share\getopt.c" />
     <ClCompile Include="..\..\share\getopt1.c" />
+    <ClCompile Include="..\..\src\metadata_file.c" />
     <ClCompile Include="..\..\src\opus_header.c" />
     <ClCompile Include="..\..\src\opusenc.c" />
     <ClCompile Include="..\..\src\picture.c" />
     <ClCompile Include="..\..\src\resample.c" />
+    <ClCompile Include="..\..\src\utf8.c" />
     <ClCompile Include="..\..\src\audio-in.c" />
     <ClCompile Include="..\..\src\diag_range.c" />
     <ClCompile Include="..\..\src\flac.c" />
@@ -38,6 +40,7 @@
     <ClInclude Include="..\..\src\diag_range.h" />
     <ClInclude Include="..\..\src\flac.h" />
     <ClInclude Include="..\..\src\lpc.h" />
+    <ClInclude Include="..\..\src\metadata_file.h" />
     <ClInclude Include="..\..\src\opusenc.h" />
     <ClInclude Include="..\..\src\opus_header.h" />
     <ClInclude Include="..\..\src\os_support.h" />
@@ -45,6 +48,7 @@
     <ClInclude Include="..\..\src\resample_sse.h" />
     <ClInclude Include="..\..\src\speex_resampler.h" />
     <ClInclude Include="..\..\src\stack_alloc.h" />
+    <ClInclude Include="..\..\src\utf8.h" />
     <ClInclude Include="..\..\src\wave_out.h" />
     <ClInclude Include="..\..\src\wav_io.h" />
     <ClInclude Include="..\..\win32\config.h" />
